# shiyan2925

./: .dockerignore  .gitignore  ACCEPTANCE_CHECKLIST.md  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  PROGRESS.md  README.md  README_EN.md  SECURITY_ADVERSARIAL_REVIEW.md  alert_manager.py  alignment_middleware.py  alignment_middleware.pye  api_server.py  async_bus.py  audit_trail.py  auto_kb_updater.py  awareness_gateway.py  awareness_gateway.pye  awareness_metrics.py  backpressure.py  backpressure.pye  batch_check.py  bench_out_1.json  bench_out_3.json  benchmark.py  benchmark_report.json  bias_detector.py  billing.py  build_binaries.py  build_encrypt.py  cache_stats.py  chaos_engineering.py  chaos_engineering.pye  chaos_out.json  checker_classes.py  checker_classes.pye  checker_registry.py  checker_registry.pye  (+131 more)
.codex/: config.toml
.github/profile/: README.md
.github/workflows/: build-binaries.yml  ci.yml  docker-build.yml  docs.yml  enterprise-gate.yml  pypi-publish.yml  release.yml  test.yml  unity-activate.yml  unity-cloud-build.yml
.memory/project/: architecture.md
.mimo2codex/: version-check.json
.ollama/cache/: model-recommendations.json
.reasonix/: config.json
ai-desktop-pet/: .gitignore  ARCHITECTURE.md  start.sh
ai-desktop-pet/android_bridge/: floating_window.sh  notify.sh  sensor.sh
ai-desktop-pet/backend/: automation.py  config.json  emotion_engine.py  llm_engine.py  memory.py  personality.py  pet_server.py
baseline/: metrics.json
benchmark/: __init__.py  baseline_meta.json  error_bucket.py  error_summary.json  error_taxonomy.json  gen_golden.py  run.py  security_audit.json
ci/: benchmark_gate.py  entities_sample.json  error_dashboard.py  kb_generator.py  metrics_reporter.py
demos/: compiled_awareness.py  demo_auto_captions.sh  demo_full_pipeline.sh  demo_with_narration.sh
docs/: index.html  index.md
k8s/: deployment.yaml
scripts/: memory_loader.py  memory_writer.py  military_news.py  session_summary.py
truth_router/: __init__.py  context_builder.py  fact_check.py  retrieval.py  router.py  scoring.py
(+50 files in other folders)
